--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   modal_progress_hud_nsn: ^0.4.0
-  timer_snackbar: ^0.0.3
   flutter_tts: ^3.7.0
   speech_to_text: ^6.3.0
   http: ^1.1.0
+  flutter_native_splash: ^2.3.1
+  flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,7 +68,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - lib/assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
